--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -1,9 +1,9 @@
-  
+
   .topnav {
     overflow: hidden;
     background-color: #333;
   }
-  
+
   .topnav a {
     float: left;
     display: block;
@@ -13,29 +13,29 @@
     text-decoration: none;
     font-size: 17px;
   }
-  
+
   .topnav a:hover {
     background-color: #ddd;
     color: black;
   }
-  
+
   .link a.active {
     background-color: #04AA6D;
     color: white;
   }
-  
+
   .topnav .icon {
     display: none;
   }
 
   @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
+    /*.topnav a:not(:first-child) {display: none;}*/
     .topnav a.icon {
       float: right;
       display: block;
     }
   }
-  
+
   @media screen and (max-width: 600px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive .icon {
